# hba1c-classification-formal

./: .gitignore  Makefile  README.md  dune-project  extract_hba1c_and_bp.py  hba1c-classifier.opam  nhanes_pipeline.sh  requirements.txt
coq/: coq_aqi.v  do_extract.v  extract_hba1c.v  extract_script.v
coq/Rocq/: IntervalClassifier.v  coq_hba1c.v
ocaml/: aqi_classification.ml  dune  hba1c_classifier.ml  hba1c_classifier.mli  main.ml  main_nhanes.ml  nhanes_data_processor.ml
results/20250701/: mutual_exclusion_check.txt  nhanes_bp.csv  nhanes_cholesterol.csv  nhanes_demo.csv  nhanes_hba1c.csv  summary.txt
scripts/: summarize_results.py
