opam-version: "2.0"
name: "aqi-classifier"
version: "0.1.0"
maintainer: "dhwcmoore@gmail.com"
authors: "Duston Moore"
homepage: "https://github.com/dhwcmoore/aqi-classification-formal"
dev-repo: "git+https://github.com/dhwcmoore/aqi-classification-formal.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "3.0"}
  "zarith"
]
